exports[`BpkGridContainer should render correctly 1`] = `
<div
  className="bpk-grid__container">
  Contents
</div>
`;

exports[`BpkGridContainer should render correctly with "className" attribute 1`] = `
<div
  className="bpk-grid__container my-custom-class">
  Contents
</div>
`;

exports[`BpkGridContainer should render correctly with "debug" attribute 1`] = `
<div
  className="bpk-grid__container bpk-grid__container--debug">
  Contents
</div>
`;

exports[`BpkGridContainer should render correctly with "fullWidth" attribute 1`] = `
<div
  className="bpk-grid__container bpk-grid__container--full-width">
  Contents
</div>
`;

exports[`BpkGridContainer should render correctly with arbitrary attributes 1`] = `
<div
  className="bpk-grid__container"
  data-arbitrary-1="my-arbitrary-data"
  data-arbitrary-2="my-arbitrary-data">
  Contents
</div>
`;
